<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_back">

    <android.support.v7.widget.Toolbar
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/toolbar"
        app:theme="@style/White_toolbar"
        android:id="@+id/about_toolbar">

        </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

    <ImageView
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:id="@+id/imageView2"
        android:layout_marginTop="30dp"
        android:background="@drawable/icon"
        android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:textColor="@color/text_color_2"
                android:layout_gravity="center_horizontal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/version"
        android:layout_marginTop="10dp"
        android:textColor="@color/text_color_2"
        android:layout_gravity="center_horizontal"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/developer"
                android:textSize="20sp"
                android:layout_marginTop="25dp"
                android:textColor="@color/text_color_2"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/idea"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:textColor="@color/text_color_2"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:layout_marginTop="10dp"
                android:textColor="@color/text_color_2"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact"
                android:layout_marginTop="30dp"
                android:textSize="16dp"
                android:textColor="@color/text_color_2"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:layout_marginTop="10dp"
                android:textColor="@color/text_color_2"
                android:layout_gravity="center_horizontal"/>

    </LinearLayout>

    </ScrollView>

</LinearLayout>